[package]
name = "sglang-kv-indexer"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "sglang_kv_indexer"
path = "src/lib.rs"

[[bin]]
name = "kv-indexer-server"
path = "src/bin/kv-indexer-server.rs"

[[bin]]
name = "kv-indexer-bridge"
path = "src/bin/kv-indexer-bridge.rs"

[dependencies]
bytes = "1"
prost = "0.14"
rmpv = "1.3.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tonic = { version = "0.14.6", features = ["transport"] }
tonic-prost = "0.14.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zeromq = "0.6.0"

[build-dependencies]
tonic-prost-build = "0.14.6"
