[package]
name = "sglang-kv-indexer"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "sglang_kv_indexer"
path = "src/lib.rs"

[features]
default = []
# Enables the Redis storage backend. Kept off by default so the standard build
# does not pull the redis client and its transitive deps.
redis-backend = ["dep:redis", "dep:futures"]

[[bin]]
name = "kv-indexer-server"
path = "src/bin/kv-indexer-server.rs"

[[bin]]
name = "kv-indexer-bridge"
path = "src/bin/kv-indexer-bridge.rs"

# Load generator for the Redis backend. Requires the redis-backend feature.
[[bin]]
name = "kv-indexer-bench"
path = "src/bin/kv-indexer-bench.rs"
required-features = ["redis-backend"]

[dependencies]
bytes = "1"
futures = { version = "0.3", optional = true }
prost = "0.14"
redis = { version = "0.27", optional = true, features = [
    "tokio-comp",
    "cluster-async",
    "connection-manager",
] }
rmpv = "1.3.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tonic = { version = "0.14.6", features = ["transport"] }
tonic-health = "0.14"
tonic-prost = "0.14.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zeromq = "0.6.0"

[build-dependencies]
tonic-prost-build = "0.14.6"
